--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <h2 class="text-xl font-bold mb-4">Add Food Item</h2>
         <div class="flex gap-4 mb-4">
             <div class="w-full">
-                <label for="foodItem" class="text-md font-semibold mb-2 block">Food Item</label>
-                <input type="text" id="foodItem" class="border border-gray-500 rounded-md p-2 w-full" placeholder="e.g., Apple">
+                <label for="foodItemInput" class="text-md font-semibold mb-2 block">Food Item</label>
+                <input type="text" id="foodItemInput" class="border border-gray-500 rounded-md p-2 w-full" placeholder="e.g., Apple">
             </div>
             <div class="w-full">
-                <label for="calorieCount" class="text-md font-semibold mb-2 block">Calories</label>
-                <input type="number" id="calorieCount" class="border border-gray-500 rounded-md p-2 w-full" placeholder="e.g., 52">
+                <label for="calorieCountInput" class="text-md font-semibold mb-2 block">Calories</label>
+                <input type="number" id="calorieCountInput" class="border border-gray-500 rounded-md p-2 w-full" placeholder="e.g., 52">
             </div>
         </div>
 
-        <button type="submit" class="bg-blue-600 text-white w-3xl px-8 py-2 rounded-md mt-4 hover:bg-blue-700 transition-colors gap-4 items-center text-md font-bold tracking-wider"><i class="fa-solid fa-plus mr-2" style="color: rgb(255, 255, 255);"></i>Add Food Item</button>
+        <button type="submit" id="btn" class="bg-blue-600 text-white w-3xl px-8 py-2 rounded-md mt-4 hover:bg-blue-700 transition-colors gap-4 items-center text-md font-bold tracking-wider"><i class="fa-solid fa-plus mr-2" style="color: rgb(255, 255, 255);"></i>Add Food Item</button>
     </form>
 
 
