update calorie counter and item count display logic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calorie Counter</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/ac82667efe.js" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" href="style.css">
     </head>
 <body class="bg-slate-300 font-sans">
     <header class="p-8 text-center">
@@ -21,7 +21,7 @@
             <h2 class="text-white text-2xl font-bold tracking-wide">Total Calories</h2>
         </div>
 
-        <div id="totalCalorieCounter"></div>
+        <div id="totalCalorieCounter" ></div>
         <div id="dailyItemCount"></div>
         
     </div>
