add functionality to display a list today's food

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <button type="submit" id="btn" class="bg-blue-600 text-white w-3xl px-8 py-2 rounded-md mt-4 hover:bg-blue-700 transition-colors gap-4 items-center text-md font-bold tracking-wider"><i class="fa-solid fa-plus mr-2" style="color: rgb(255, 255, 255);"></i>Add Food Item</button>
     </form>
 
+    <div class=" w-[60%] bg-white rounded-xl mx-auto p-6 m-8 shadow-lg">
+        <h2 class="text-xl font-bold mb-4">Today's Food</h2>
+        <ul id="foodList" class="bg-white rounded-xl mx-auto p-6 shadow-xl border border-gray-300"></ul>
+    </div>
+
 
 
     
