add delete functionality for food items in the list

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class=" w-[60%] bg-white rounded-xl mx-auto p-6 m-8 shadow-lg">
         <h2 class="text-xl font-bold mb-4">Today's Food</h2>
-        <ul id="foodList" class="bg-white rounded-xl mx-auto p-6 shadow-xl border border-gray-300"></ul>
+        <ul id="foodList" class="list-none p-6"></ul>
     </div>
 
 
