add message for empty food list in display

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             <h2 class="text-xl font-bold mb-4">Today's Food</h2>
             <p id="resetIcon" class="text-red-600 hover:bg-red-400/50 p-2 rounded-lg font-semibold cursor-pointer"><i class="fa-solid fa-arrow-rotate-left fa-md" style="color: rgb(255, 0, 0);" ></i> Reset All</p>
         </div>
-        <ul id="foodList" class="list-none p-6"></ul>
+        <ul id="foodList" class="list-none p-6">
+            
+        </ul>
     </div>
 
 
