refactor layout and styling for calorie display and input format different screen sizes; add list item hover effect

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
         <p class="text-lg font-semibold opacity-60">Track your daily calorie consumption </p>
     </header>
 
-    <div id="calorieDisplay" class="w-[60%] bg-orange-600 mx-auto p-6 rounded-xl shadow-lg">
+    <div id="calorieDisplay" class="w-[85%] md:w-[75%] lg:w-[60%] bg-orange-600 mx-auto p-6 rounded-xl shadow-lg">
 
         <div class="flex items-center">
             <i class="fa-brands fa-nutritionix fa-xl" style="color: rgb(255, 255, 255);"></i>
-            <div class="flex justify-between items-center w-full">
-                <h2 class="text-white text-2xl font-bold tracking-wide">Total Calories</h2>
+            <h2 class="text-white text-2xl font-semibold tracking-wide">Total Calories</h2>
 
-            </div>
         </div>
 
         <div id="totalCalorieCounter">0</div>
@@ -31,7 +29,7 @@
 
     </div>
 
-    <form id="inputForm" class="bg-white rounded-xl w-[60%] mx-auto p-6 m-8 shadow-lg">
+    <form id="inputForm" class="bg-white rounded-xl w-[85%] md:w-[75%] lg:w-[60%] mx-auto p-6 m-8 shadow-lg">
         <h2 class="text-xl font-bold mb-4">Add Food Item</h2>
         <div class="flex gap-4 mb-4">
             <div class="w-full">
@@ -51,7 +49,7 @@
                 class="fa-solid fa-plus mr-2" style="color: rgb(255, 255, 255);"></i>Add Food Item</button>
     </form>
 
-    <div class=" w-[60%] bg-white rounded-xl mx-auto p-6 m-8 shadow-lg">
+    <div class="w-[85%] md:w-[75%] lg:w-[60%] bg-white rounded-xl mx-auto p-6 m-8 shadow-lg">
         <div class="flex justify-between items-center w-full">
             <h2 class="text-xl font-bold mb-4">Today's Food</h2>
             <p id="resetIcon" class="text-red-600 hover:bg-red-400/50 p-2 rounded-lg font-semibold cursor-pointer"><i class="fa-solid fa-arrow-rotate-left fa-md" style="color: rgb(255, 0, 0);" ></i> Reset All</p>
